overlays/uksouth-staging/olympus/pelops/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: api.${cluster_name}.${cluster_location}.bink.sh-pelops
  namespace: default
spec:
  rules:
    - host: api.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /cardstatus
            pathType: Prefix
            backend:
              service:
                name: pelops-api
                port:
                  number: 80
  tls:
    - hosts:
        - api.${cluster_name}.${cluster_location}.bink.sh
